[package]
name = "contracts-alpha"
version = "0.1.0"
edition = "2021"
overflow-checks=true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
near-contract-standards = { git = "https://github.com/near/near-sdk-rs.git", branch = "master", package = "near-contract-standards" }
near-sdk = { git = "https://github.com/near/near-sdk-rs.git", branch = "master", package = "near-sdk" }
near-sdk-macros = { git = "https://github.com/near/near-sdk-rs.git", branch = "master", package = "near-sdk-macros" }
serde = { version = "1.0.188", features = ["derive"] }
