[package]
name = "contracts-nfts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true


[dependencies]
near-contract-standards = { git = "https://github.com/near/near-sdk-rs.git", branch = "master", package = "near-contract-standards" }
near-sdk = { git = "https://github.com/near/near-sdk-rs.git", branch = "master", package = "near-sdk" }
near-sdk-macros = { git = "https://github.com/near/near-sdk-rs.git", branch = "master", package = "near-sdk-macros" }
serde = { version = "1.0.188", features = ["derive"] }
